--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -9,6 +9,7 @@
 
     section#login{
         width: 80vw;
+        height: 300px;
     }
     section#login > div#imagem{
         float: left;
@@ -26,17 +27,25 @@
     body{
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
-    
+
     section#login{
         width:950px;
+        height: 350px;
     }
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
     section#login >div#formulario{
-        float: right;
+        float: left;
         width: 50%;
+    }
+    div#formulario > h1{
+        font-size: 2em;
+    }
+    div#formulario > p{
+        font-size: 1.2em;
+        margin: 10px 0px; 
     }
 }
