--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,43 +3,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&display=swap');
 
 
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
 
-body , html{
+body,
+html {
     background-color: #5f2c82;
     height: 100vh;
     width: 100vw;
 }
 
-main{
+main {
     position: relative;
     height: 100vh;
     width: 100vw;
 }
 
-section#login{
+section#login>div#formulario p {
+    font-size: .8em;
+}
+
+section#login {
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.575);
 
-    position:absolute;
-    top:50%;
+    position: absolute;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
 
+    transform: translate(-50%, -50%);
     transition: width 0.3s, heigh 0.3s;
     transition-timing-function: ease;
 }
 
-section#login > div#imagem{
+section#login>div#imagem {
     display: block;
     background: url(../imagens/pexels-scott-webb-139198.jpg) no-repeat;
     height: 200px;
@@ -47,8 +52,93 @@ section#login > div#imagem{
     background-position: left bottom;
 }
 
-section#login > div#formulario{
+section#login>div#formulario {
     display: block;
     padding: 10px;
 
+}
+
+div#formulario>h1 {
+    text-align: center;
+    margin-bottom: 10px;
+
+}
+
+div#formulario>p {
+    font-size: 0.8em, ;
+}
+
+form > div.campo{
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+    border: 2px solid #5f2c82;
+}
+
+div.campo > label{
+    display: none;
+}
+
+div.campo > i{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+div.campo > input{
+    background-color: #49a09d;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-13px);
+}
+
+div.campo >input:focus-within{
+    background-color: white;
+
+}
+
+form > input[type=submit] {
+
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    color: white;
+    background-color: #49a09d;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+    background-color: #2f6664;
+
+}
+form >a.botao{
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
+    padding-top: 7px;
+    background-color: #fff;
+    border-radius: 8px;
+    border: 1px solid #2f6664;
+    color: #2f6664;
+}
+form >a.botao:hover{
+    background-color: #6eebe6;
+}
+
+form >a.botao >i{
+    font-size: 0.8em;
 }
